syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/HaiHart/shipdock/proto";

service Com{
    rpc MoveContainer(stream Pack) returns (stream Pack);
    rpc FetchShip(ShipAccess) returns (ShipResponse);
    rpc FetchList(Header) returns (ShipList);
    rpc FetchDocks(Header) returns (Docks);
    rpc MoveShip(stream PlaceShip) returns (stream PlaceShip);
}

message Header{
    google.protobuf.Timestamp time =1;
}

message Detail{
    string from=1;
    string owner=2;
    string atTime=3;
    string by =4;
}

message Container{
    string id =1;
    google.protobuf.Timestamp time =2;
    int32 place =3;
    string name = 4;
    int32 new_place=5;
    Detail detail=6;
}

message ContainerSet{
    string id =1;
    int32 key=2;
    int32 place =3;
    string name = 4;
    Detail detail=6;
}

message Pack{
    repeated Container list=1;
    string err =2;
    bool swap = 3;
}

message ShipAccess{
    string ship_name =1;
    string man_id =2;
    int32 floor =3;
    Header head =5;
}

message ShipResponse{
    int32 size =1;
    string err =2;
    Header head =3;
    repeated Container container_list =4;
}

message ShipList{
    repeated ContainerSet list=1;
    repeated string log=2;
}

message Ship {
	string name=1;
	int32 placed=2;
	string Iden=3; 
	int32 Key=4;
	Detail detail=5;
	google.protobuf.Timestamp inTime =6;
	google.protobuf.Timestamp outTime =7;
	uint32 length=8;
}

message Doc{
	int32 no=1;
	string name=2;
	uint32 length=3;
	int32 boarderRight=4; 
    repeated string shipList=5;
}

message Docks{
    repeated Ship ships=1;
    repeated Doc docks=2;
    repeated string log=3;
}

message PlaceShip{
    message ShipList{
        repeated string list=1;
    }
    repeated ShipList shipList=1;
    Ship ship =2;
    int32 place=4;
    bool changeTime=3;
    string err=5;
}
